fix: Add background color fallback essentially for list items in case off-screen initially

--- a/blocks/shared-styles/scss/_header-nav.scss
+++ b/blocks/shared-styles/scss/_header-nav.scss
@@ -384,6 +384,7 @@ body.nav-open {
       font-weight: bold;
       list-style: none;
       position: relative;
+      background-color: #292929;
 
       > a {
         padding: 0 16px 0 20px;
